src/main/resources/tests/Semantics/good/operationReturn3.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : boolean;
begin
   X := true or true;
end ExampleProcedure;
