src/main/resources/tests/Semantics/bad/assignmentType3.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : boolean := 1;
begin
    X;
end ExampleProcedure;
